# AutoNexus

./: .gitignore  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/autonexus-cli/: Cargo.toml
core/autonexus-cli/src/: main.rs
core/autonexus-common/: Cargo.toml
core/autonexus-common/src/: lib.rs
core/autonexus-hw/: Cargo.toml
core/autonexus-hw/src/: lib.rs
core/autonexus-protocols/: Cargo.toml
core/autonexus-protocols/src/: dbc.rs  lib.rs
sdk/: package-lock.json  package.json
sdk/src/: can.ts  index.ts  lin.ts  runner.ts  uds.ts
ui/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/electron/: main.ts
ui/src/: App.vue  style.css
ui/src/components/: Gauge.vue  ScriptEditor.vue  SignalChart.vue  TrafficDecoder.vue  Vehicle3D.vue
