[package]
name = "autonexus-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
autonexus-common = { version = "0.1.0", path = "../autonexus-common" }
autonexus-hw = { version = "0.1.0", path = "../autonexus-hw" }
autonexus-protocols = { version = "0.1.0", path = "../autonexus-protocols" }
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
console = "0.16.2"
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ["full"] }
